samples/_failures_safe/1761645391_db6c11_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2d7555ab.c: In function ‘main’:
./samples/SAFE/__tmp_2d7555ab.c:159:25: error: expected ‘)’ at end of input
  159 |     add_edge(&g, 1, 3, 1
      |             ~           ^
      |                         )
./samples/SAFE/__tmp_2d7555ab.c:159:5: error: expected declaration or statement at end of input
  159 |     add_edge(&g, 1, 3, 1
      |     ^~~~~~~~
